<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".DesignChooseActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseDesignType"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="70sp"
        android:layout_marginStart="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177"
        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/designButton1"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/purpleColor"
        android:onClick="onClickButton"
        android:text="@string/designButton1" />

    <Button
        android:id="@+id/designButton2"
        android:layout_centerHorizontal = "true"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_below="@id/designButton1"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purpleColor"
        android:text="@string/designButton2"
        android:onClick="onClickButton"/>

</RelativeLayout>