<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="50sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:layout_marginTop="50sp"
        android:layout_marginStart="20sp"
        android:textSize="18sp"
        android:layout_below="@id/appName"
        android:textColor="@color/textColor"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="198dp"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:gravity="top|left"
        android:background="@drawable/edittext_frame"
        android:scrollbars="vertical"
        android:layout_below="@id/text"
        android:layout_marginTop="50sp"
        android:layout_marginStart="20sp"
        android:textColor="@color/textColor"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="287dp" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputText"
        android:layout_marginStart="200sp"
        android:layout_marginTop="243sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/purpleColor"
        android:text="@string/generateButton"
        app:backgroundTint="#FFFFFF" />


</RelativeLayout>